# daglinter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: index.md
docs/developer-guide/: architecture.md  contributing.md  creating-rules.md  development-setup.md  testing.md
docs/project/: ARCHITECTURE_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README_DOCS.md  TEST_SUITE_SUMMARY.md  metrics.md  requirements.md  roadmap.md  user-stories.md
docs/user-guide/: cli-reference.md  configuration.md  examples.md  installation.md  quickstart.md  rules.md
examples/: .daglinter.yml
examples/sample_dags/: example_dag.py
src/daglinter/: __init__.py  __version__.py
src/daglinter/cli/: __init__.py  main.py
src/daglinter/core/: __init__.py  config.py  engine.py  models.py  parser.py
src/daglinter/formatters/: __init__.py  json.py  sarif.py  terminal.py
src/daglinter/rules/: __init__.py  base.py  complex_deps.py  database_calls.py  heavy_imports.py  missing_docs.py
src/daglinter/utils/: __init__.py  scope.py
tests/: __init__.py  conftest.py
tests/fixtures/: bad_db_calls.py  bad_imports.py  good_dag.py  missing_docs.py
tests/fixtures/config_examples/: custom_rules.yml  full.yml  invalid.yml  minimal.yml
tests/fixtures/edge_cases/: all_violations.py  empty_file.py  large_dag.py  multiline_strings.py  nested_imports.py  syntax_error.py  unicode_content.py
tests/integration/: __init__.py  test_cli.py  test_end_to_end.py
tests/performance/: test_speed.py
tests/security/: test_safety.py
tests/unit/: __init__.py  test_config.py  test_engine.py  test_formatters.py  test_parser.py  test_rules.py
